Fix vertical spacing for new posts loaded with Infinite Scroll (#11293)
* Fix vertical spacing for new posts loaded with Infinite Scroll

* Remove sharedaddy margins change, code tidying

--- a/modules/theme-tools/compat/twentynineteen.css
+++ b/modules/theme-tools/compat/twentynineteen.css
@@ -64,6 +64,10 @@
 	outline-offset: -4px;
 }
 
+.site-main .infinite-wrap .entry:first-of-type {
+	margin-top: calc(6 * 1rem);
+}
+
 /**
  * Responsive Videos
  */
